Support manage building

--- a/.env
+++ b/.env
@@ -1,7 +1,14 @@
 API_PORT=8000
 API_SECRET=34edfver23refdvcer3
+API_Access_Secret =e*D6@u!AT$aaw&K9bAz$C6Vbh#tD7r
+API_Refresh_Secret =p&xD6S#TmDS7@VQ2FfB#e&qhWxa&8$ 
 
 KEY=level turkey to one police gauge
+
+#Redis CONFIG
+REDIS_DSN=127.0.0.1:6379
+REDIS_PASS=""
+REDIS_DB=0
 
 # DATABASE CONFIG
 DB_DRIVER=mysql
